antlr_generated/CSoft.g4
grammar CSoft;

COMMA : ',' ;
DOT : '.' ;
LPAREN : '(' ;
RPAREN : ')' ;
LBRACE : '{' ;
RBRACE : '}' ;
LBRACKET : '[' ;
RBRACKET: ']' ;
PRINT : 'print' ;
READ : 'read' ;
IF: 'if';
STRUCT: 'struct' ;

COMMENT: '#' ~[\r\n]* -> skip;

ID : [a-zA-Z_][a-zA-Z0-9_]*;

STRING :  '"' [a-zA-Z0-9 \t\n*+-]+ '"';

WS : [ \t\r\n]+ -> skip;

prog: statement*  EOF 
    ;

statement: print_statement		#print
	| read_statement  		#read
    | expr              # exprression
 	| ident '=' expr		#assign
    | ID LBRACKET INT RBRACKET '=' expr #elementAssign
    | ident '=' arrayAssign  #arrAssign
    | repeatStm                #repeatStatement
    | ifStm                 #ifStatement
    | function              #funcDecl
    | structDecl            #structDeclaration
    | structFieldAssign     #structFieldAssignment
    | structAssign          #structAssignmet
    | classDecl             #classDeclaration
    | classAssign           #classAssignment
    ;
ident: (type)? ID;

assignment : ident '=' expr;

print_statement : PRINT LPAREN ID RPAREN ;

read_statement : READ LPAREN ID RPAREN ;

arrayAssign: LBRACKET factor (COMMA factor)* RBRACKET;

expr: condXorStm OrOper condXorStm 
    | condXorStm
    ;

condXorStm: condStmAnd XorOper condStmAnd
    | condStmAnd
    ;

condStmAnd: condStmRel AndOper condStmRel
    | condStmRel
    ;

condStmRel: addExpr RelOper addExpr
    | addExpr
    ;

addExpr: multExpr AddOper multExpr
    | multExpr
    ;

multExpr: negFactor MultOper negFactor
    | negFactor
    ;

negFactor: NegOper factor 
    | factor
    ;


factor: INT
    | FLOAT
    | STRING
    | BOOL
    | ID
    | arrayAccess
    | funcCall
    | structFieldAccess
    | methodCall
    ;


ifStm: IF LPAREN expr RPAREN LBRACE blockIf RBRACE ;

blockIf: statement* ;

repeatStm: REPEAT repNum LBRACE blockRepeat RBRACE  
    ;

repNum: factor 
    ;

blockRepeat: statement* 
    ;

function: funType funName LPAREN parameters? RPAREN LBRACE blockFun RBRACE ;

blockFun: statement* ;

classDecl: CLASS className LBRACE blockClass RBRACE  ;

blockClass: structVarDecl* method*  ;

method: methodType methodName LBRACE blockMethod RBRACE  ;

blockMethod: statement*  ;

methodType: type ;

methodName: ID ;

className: ID ;

methodCall: ID '.' ident '()' ;

classAssign: ident '=' CLASS className ;

parameters : parameter (COMMA parameter)* ;

parameter : ident ;


structDecl: STRUCT structName '{' blockStruct '}' ;

blockStruct: structVarDecl* ;

structVarDecl: ident ;

structAssign: ident '=' STRUCT structName;

structFieldAssign: ID DOT ident '=' expr ;

structFieldAccess: ID DOT ident ;

arrayAccess: ID LBRACKET INT RBRACKET;

funcCall: ID '()' 
    ;


type: 'float32' | 'double' | 'int32' | 'int64' | 'bool' | 'string';

funType: type 
    ;

funName: ID 
    ;
structName: ID
    ;


REPEAT: 'rep';

FUNCTION: 'func'
    ;

CLASS: 'class'  ;

   

INT:   [0-9]+
    ;

FLOAT: [0-9]+ '.' [0-9]+
    ;

BOOL    : 'true' | 'false';

AddOper: '+' | '-'
    ;

MultOper: '*' | '/' | '%'
    ;

NegOper: '!'
    ;

RelOper: '==' | '!=' | '<' | '>' | '<=' | '>='
    ;

AndOper: '&&'
    ;

OrOper: '||'
    ;

XorOper: '^'
    ;
