src/antlr_generated/CSoftParser.py
# Generated from ./antlr_generated/CSoft.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CSoftParser ( Parser ):

    grammarFileName = "CSoft.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'double'", "'int'", "'long'", "'bool'", 
                     "'string'", "'void'", "','", "'.'", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "'print'", "'read'", "'if'", "'struct'", 
                     "'class'", "<INVALID>", "'repeat'", "'='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'!'", "<INVALID>", 
                     "'&&'", "'||'", "'^'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMMA", "DOT", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "PRINT", "READ", "IF", "STRUCT", "CLASS", 
                      "BOOL", "REPEAT", "ASSIGN", "INT", "FLOAT", "AddOper", 
                      "MultOper", "NegOper", "RelOper", "AndOper", "OrOper", 
                      "XorOper", "COMMENT", "ID", "STRING", "WS" ]

    RULE_type = 0
    RULE_prog = 1
    RULE_statement = 2
    RULE_ident = 3
    RULE_arrayElementAssign = 4
    RULE_assignment = 5
    RULE_print_statement = 6
    RULE_read_statement = 7
    RULE_arrayAssign = 8
    RULE_expr = 9
    RULE_condXorStm = 10
    RULE_condStmAnd = 11
    RULE_condStmRel = 12
    RULE_addExpr = 13
    RULE_multExpr = 14
    RULE_negFactor = 15
    RULE_factor = 16
    RULE_ifStm = 17
    RULE_blockIf = 18
    RULE_repeatStm = 19
    RULE_repNum = 20
    RULE_blockRepeat = 21
    RULE_function = 22
    RULE_blockFun = 23
    RULE_classDecl = 24
    RULE_blockClass = 25
    RULE_method = 26
    RULE_blockMethod = 27
    RULE_methodType = 28
    RULE_methodName = 29
    RULE_className = 30
    RULE_methodCall = 31
    RULE_classAssign = 32
    RULE_parameters = 33
    RULE_parameter = 34
    RULE_structDecl = 35
    RULE_blockStruct = 36
    RULE_structVarDecl = 37
    RULE_structAssign = 38
    RULE_structFieldAssign = 39
    RULE_structFieldAccess = 40
    RULE_arrayAccess = 41
    RULE_funcCall = 42
    RULE_arguments = 43
    RULE_argument = 44
    RULE_funType = 45
    RULE_funName = 46
    RULE_structName = 47

    ruleNames =  [ "type", "prog", "statement", "ident", "arrayElementAssign", 
                   "assignment", "print_statement", "read_statement", "arrayAssign", 
                   "expr", "condXorStm", "condStmAnd", "condStmRel", "addExpr", 
                   "multExpr", "negFactor", "factor", "ifStm", "blockIf", 
                   "repeatStm", "repNum", "blockRepeat", "function", "blockFun", 
                   "classDecl", "blockClass", "method", "blockMethod", "methodType", 
                   "methodName", "className", "methodCall", "classAssign", 
                   "parameters", "parameter", "structDecl", "blockStruct", 
                   "structVarDecl", "structAssign", "structFieldAssign", 
                   "structFieldAccess", "arrayAccess", "funcCall", "arguments", 
                   "argument", "funType", "funName", "structName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    COMMA=7
    DOT=8
    LPAREN=9
    RPAREN=10
    LBRACE=11
    RBRACE=12
    LBRACKET=13
    RBRACKET=14
    PRINT=15
    READ=16
    IF=17
    STRUCT=18
    CLASS=19
    BOOL=20
    REPEAT=21
    ASSIGN=22
    INT=23
    FLOAT=24
    AddOper=25
    MultOper=26
    NegOper=27
    RelOper=28
    AndOper=29
    OrOper=30
    XorOper=31
    COMMENT=32
    ID=33
    STRING=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CSoftParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = CSoftParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 126) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSoftParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSoftParser.StatementContext)
            else:
                return self.getTypedRuleContext(CSoftParser.StatementContext,i)


        def getRuleIndex(self):
            return CSoftParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = CSoftParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 25933348990) != 0):
                self.state = 98
                self.statement()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(CSoftParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CSoftParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StructDeclarationContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structDecl(self):
            return self.getTypedRuleContext(CSoftParser.StructDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDeclaration" ):
                return visitor.visitStructDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class ReadContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def read_statement(self):
            return self.getTypedRuleContext(CSoftParser.Read_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)


    class RepeatStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def repeatStm(self):
            return self.getTypedRuleContext(CSoftParser.RepeatStmContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeatStatement" ):
                listener.enterRepeatStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeatStatement" ):
                listener.exitRepeatStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeatStatement" ):
                return visitor.visitRepeatStatement(self)
            else:
                return visitor.visitChildren(self)


    class ElementAssignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arrayElementAssign(self):
            return self.getTypedRuleContext(CSoftParser.ArrayElementAssignContext,0)

        def expr(self):
            return self.getTypedRuleContext(CSoftParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElementAssign" ):
                listener.enterElementAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElementAssign" ):
                listener.exitElementAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElementAssign" ):
                return visitor.visitElementAssign(self)
            else:
                return visitor.visitChildren(self)


    class ExprressionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CSoftParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprression" ):
                listener.enterExprression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprression" ):
                listener.exitExprression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprression" ):
                return visitor.visitExprression(self)
            else:
                return visitor.visitChildren(self)


    class StructAssignmetContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structAssign(self):
            return self.getTypedRuleContext(CSoftParser.StructAssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructAssignmet" ):
                listener.enterStructAssignmet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructAssignmet" ):
                listener.exitStructAssignmet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructAssignmet" ):
                return visitor.visitStructAssignmet(self)
            else:
                return visitor.visitChildren(self)


    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStm(self):
            return self.getTypedRuleContext(CSoftParser.IfStmContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)


    class ClassDeclarationContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def classDecl(self):
            return self.getTypedRuleContext(CSoftParser.ClassDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class PrintContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_statement(self):
            return self.getTypedRuleContext(CSoftParser.Print_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)


    class ClassAssignmentContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def classAssign(self):
            return self.getTypedRuleContext(CSoftParser.ClassAssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassAssignment" ):
                listener.enterClassAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassAssignment" ):
                listener.exitClassAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassAssignment" ):
                return visitor.visitClassAssignment(self)
            else:
                return visitor.visitChildren(self)


    class FuncDeclContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def function(self):
            return self.getTypedRuleContext(CSoftParser.FunctionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(CSoftParser.AssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)


    class ArrAssignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ident(self):
            return self.getTypedRuleContext(CSoftParser.IdentContext,0)

        def ASSIGN(self):
            return self.getToken(CSoftParser.ASSIGN, 0)
        def arrayAssign(self):
            return self.getTypedRuleContext(CSoftParser.ArrayAssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrAssign" ):
                listener.enterArrAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrAssign" ):
                listener.exitArrAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrAssign" ):
                return visitor.visitArrAssign(self)
            else:
                return visitor.visitChildren(self)


    class StructFieldAssignmentContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSoftParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structFieldAssign(self):
            return self.getTypedRuleContext(CSoftParser.StructFieldAssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructFieldAssignment" ):
                listener.enterStructFieldAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructFieldAssignment" ):
                listener.exitStructFieldAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructFieldAssignment" ):
                return visitor.visitStructFieldAssignment(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = CSoftParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = CSoftParser.PrintContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.print_statement()
                pass

            elif la_ == 2:
                localctx = CSoftParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.read_statement()
                pass

            elif la_ == 3:
                localctx = CSoftParser.ExprressionContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.expr()
                pass

            elif la_ == 4:
                localctx = CSoftParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.assignment()
                pass

            elif la_ == 5:
                localctx = CSoftParser.ElementAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 110
                self.arrayElementAssign()
                self.state = 111
                self.expr()
                pass

            elif la_ == 6:
                localctx = CSoftParser.ArrAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.ident()
                self.state = 114
                self.match(CSoftParser.ASSIGN)
                self.state = 115
                self.arrayAssign()
                pass

            elif la_ == 7:
                localctx = CSoftParser.RepeatStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 117
                self.repeatStm()
                pass

            elif la_ == 8:
                localctx = CSoftParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 118
                self.ifStm()
                pass

            elif la_ == 9:
                localctx = CSoftParser.FuncDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 119
                self.function()
                pass

            elif la_ == 10:
                localctx = CSoftParser.StructDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 120
                self.structDecl()
                pass

            elif la_ == 11:
                localctx = CSoftParser.StructFieldAssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 121
                self.structFieldAssign()
                pass

            elif la_ == 12:
                localctx = CSoftParser.StructAssignmetContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 122
                self.structAssign()
                pass

            elif la_ == 13:
                localctx = CSoftParser.ClassDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 123
                self.classDecl()
                pass

            elif la_ == 14:
                localctx = CSoftParser.ClassAssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 124
                self.classAssign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSoftParser.ID, 0)

        def type_(self):
            return self.getTypedRuleContext(CSoftParser.TypeContext,0)


        def getRuleIndex(self):
            return CSoftParser.RULE_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdent" ):
                listener.enterIdent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdent" ):
                listener.exitIdent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdent" ):
                return visitor.visitIdent(self)
            else:
                return visitor.visitChildren(self)




    def ident(self):

        localctx = CSoftParser.IdentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ident)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 126) != 0):
                self.state = 127
                self.type_()


            self.state = 130
            self.match(CSoftParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayElementAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSoftParser.ID, 0)

        def LBRACKET(self):
            return self.getToken(CSoftParser.LBRACKET, 0)

        def INT(self):
            return self.getToken(CSoftParser.INT, 0)

        def RBRACKET(self):
            return self.getToken(CSoftParser.RBRACKET, 0)

        def ASSIGN(self):
            return self.getToken(CSoftParser.ASSIGN, 0)

        def getRuleIndex(self):
            return CSoftParser.RULE_arrayElementAssign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayElementAssign" ):
                listener.enterArrayElementAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayElementAssign" ):
                listener.exitArrayElementAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayElementAssign" ):
                return visitor.visitArrayElementAssign(self)
            else:
                return visitor.visitChildren(self)




    def arrayElementAssign(self):

        localctx = CSoftParser.ArrayElementAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrayElementAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(CSoftParser.ID)
            self.state = 133
            self.match(CSoftParser.LBRACKET)
            self.state = 134
            self.match(CSoftParser.INT)
            self.state = 135
            self.match(CSoftParser.RBRACKET)
            self.state = 136
            self.match(CSoftParser.ASSIGN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self):
            return self.getTypedRuleContext(CSoftParser.IdentContext,0)


        def ASSIGN(self):
            return self.getToken(CSoftParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(CSoftParser.ExprContext,0)


        def getRuleIndex(self):
            return CSoftParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = CSoftParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.ident()
            self.state = 139
            self.match(CSoftParser.ASSIGN)
            self.state = 140
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(CSoftParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(CSoftParser.LPAREN, 0)

        def ID(self):
            return self.getToken(CSoftParser.ID, 0)

        def RPAREN(self):
            return self.getToken(CSoftParser.RPAREN, 0)

        def getRuleIndex(self):
            return CSoftParser.RULE_print_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_statement" ):
                listener.enterPrint_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_statement" ):
                listener.exitPrint_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_statement" ):
                return visitor.visitPrint_statement(self)
            else:
                return visitor.visitChildren(self)




    def print_statement(self):

        localctx = CSoftParser.Print_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(CSoftParser.PRINT)
            self.state = 143
            self.match(CSoftParser.LPAREN)
            self.state = 144
            self.match(CSoftParser.ID)
            self.state = 145
            self.match(CSoftParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Read_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(CSoftParser.READ, 0)

        def LPAREN(self):
            return self.getToken(CSoftParser.LPAREN, 0)

        def ID(self):
            return self.getToken(CSoftParser.ID, 0)

        def RPAREN(self):
            return self.getToken(CSoftParser.RPAREN, 0)

        def getRuleIndex(self):
            return CSoftParser.RULE_read_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead_statement" ):
                listener.enterRead_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead_statement" ):
                listener.exitRead_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead_statement" ):
                return visitor.visitRead_statement(self)
            else:
                return visitor.visitChildren(self)




    def read_statement(self):
